[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,coverage-report,lint
isolated_build = True

[testenv]
description = Run pytest against {envname}.
deps =
    -r{toxinidir}/requirements/main.txt
    -r{toxinidir}/requirements/dev.txt
commands =
    coverage run -m pytest {posargs}

[testenv:coverage-report]
description = Compile coverage from each test run.
skip_install = true
deps = coverage[toml]>=5.0.2
depends =
    py37
commands =
    coverage combine
    coverage report

[testenv:lint]
description = Lint codebase by running pre-commit (Black, isort, Flake8).
skip_install = true
deps =
    pre-commit
commands = pre-commit run --all-files

[testenv:docs]
description = Compile Sphinx docs.
allowlist_externals =
    make
commands = make -C docs html

[testenv:run]
description = Run the development server with auto-reload for code changes.
usedevelop = true
setenv =
    FLASK_APP=keeper
    LTD_KEEPER_PROFILE=development
commands = flask run
"""

[tool.pytest.ini_options]
norecursedirs = [
    "venv",
    ".eggs"
]
mock_use_standalone_module = true

[tool.coverage.run]
parallel = true
branch = true
source = ["keeper"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.black]
line-length = 79
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
# Use single-quoted strings so TOML treats the string like a Python r-string
# Multi-line strings are implicitly treated by black as regular expressions

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
known_first_part = ["keeper"]
known_third_party = ["alembic", "boto3", "botocore", "celery", "click", "dateutil", "flask", "flask_accept", "flask_httpauth", "flask_migrate", "flask_sqlalchemy", "itsdangerous", "mock", "pkg_resources", "pytest", "requests", "responses", "setuptools", "sqlalchemy", "structlog", "werkzeug"]
