[metadata]
name = ltd-keeper
description = LSST the Docs API server
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = jsick@lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
url = https://ltd-keeper.lsst.io
project_urls =
    Change log = https://github.com/lsst-sqre/ltd-keeper/master/blob/CHANGELOG.rst
    Source code = https://github.com/lsst-sqre/ltd-keeper
    Issue tracker = https://github.com/lsst-sqre/ltd-keeper/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Framework :: Flask
    Intended Audience :: Science/Research
    Topic :: Documentation
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages=find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
# Use requirements/main.in for runtime dependencies instead of install_requires

[options.packages.find]
where = src

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503
exclude =
  docs/conf.py,
  */__init__.py,
  migrations/*.py
  .eggs/*.py
